# MemeMind

./: .gitignore  README.md  README_zh.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 13882a3dd418_initial_migration.py  765b85e060d1_initial_migration.py  e5e812f9d2c4_initial_migration.py
app/: README_zh.md  main.py
app/api/: doc_routes.py  query_routes.py
app/chains/: embedding_loader.py  ingestion_pipeline.py  ingestion_pipeline.py.bak  llm_loader.py  qa_chain.py  qa_chain.py.bak  reranker_loader.py  vector_store.py
app/core/: celery_app.py  chromadb_client.py  config.py  database.py  embedding.py  embedding_qwen.py  llm_service.py  reranker.py  reranker_qwen.py  s3_client.py
app/models/: models.py
app/query/: routes.py  service.py
app/repository/: chunk_repository.py  doc_repository.py
app/schemas/: param_schemas.py  schemas.py
app/services/: chunk_service.py  doc_service.py  query_service.py
app/source_doc/: repository.py  routes.py  service.py
app/tasks/: dependencies.py  document_task.py
app/tasks/utils/: doc_parser.py  doc_process.py  query_process.py
app/text_chunk/: repository.py  service.py
app/ui/: gradio_interface.py
